# archflow

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-pages.yml
apps/web/: next.config.ts  package.json  pnpm-lock.yaml
apps/web/app/: layout.tsx
apps/web/app/(docs)/: layout.tsx
apps/web/app/(playground)/playground/: page.tsx
apps/web/components/: Playground.tsx
apps/web/components/playground/: examples.ts  icons.ts
apps/web/content/: _meta.ts  index.mdx
apps/web/content/docs/: _meta.ts  architecture.mdx  cli.mdx  dsl-syntax.mdx  getting-started.mdx  json-ir.mdx  providers.mdx  python-api.mdx
apps/web/public/wasm/: archflow_wasm.d.ts  archflow_wasm.js  archflow_wasm_bg.wasm
bindings/node-ffi/: Cargo.toml  index.d.ts  index.js  package.json
bindings/node-ffi/src/: lib.rs
bindings/python/: pyproject.toml
crates/archflow-cli/: Cargo.toml
crates/archflow-cli/src/: main.rs
crates/archflow-core/src/: dsl.rs  error.rs  layout.rs  lib.rs  model.rs  render.rs  resolver.rs  scene.rs  theme.rs
crates/archflow-lsp/: Cargo.toml
crates/archflow-lsp/src/: main.rs
docs/: index.html
docs/css/: style.css
docs/js/: app.js  cm-archflow.js  examples.js  icons.js  parser.js  playground.js
examples/: basic.py  event_driven.py  microservices.py
python/archflow/: cluster.py  diagram.py  node.py
python/examples/: ci_cd.py  data_pipeline.py  web_service.py
schemas/: diagram-ir.schema.json
